# Pass-Simulink

./: README.md
PASS-Backend/: .gitignore  CMakeLists.txt  build_log.txt  project.json
PASS-Backend/include/Block/: AddBlock.hpp  AverageBlock.hpp  Block.hpp  BlockFactory.hpp  BlockManager.hpp  ClockBlock.hpp  CosineBlock.hpp  GainBlock.hpp  MaxBlock.hpp  MinBlock.hpp  MultiplyBlock.hpp  ScopeBlock.hpp  SineBlock.hpp  SubtractBlock.hpp
PASS-Backend/include/Clock/: ClockBlock.hpp
PASS-Backend/include/Cosine/: CosineBlock.hpp
PASS-Backend/include/Engine/: ExecutionContext.hpp  ExecutionEngine.hpp  GraphExecutionEngine.hpp  SignalRouter.hpp  SimulationScheduler.hpp
PASS-Backend/include/Graph/: Connection.hpp  ConnectionManager.hpp  ProjectSerializer.hpp  TopologicalSorter.hpp
PASS-Backend/include/Scope/: ScopeBlock.hpp
PASS-Backend/include/Sine/: SineBlock.hpp
PASS-Backend/src/: main.cpp
PASS-Backend/src/Block/: AddBlock.cpp  AverageBlock.cpp  BlockFactory.cpp  BlockManager.cpp  ClockBlock.cpp  CosineBlock.cpp  GainBlock.cpp  MaxBlock.cpp  MinBlock.cpp  MultiplyBlock.cpp  ScopeBlock.cpp  SineBlock.cpp  SubtractBlock.cpp
PASS-Backend/src/Clock/: ClockBlock.cpp
PASS-Backend/src/Cosine/: CosineBlock.cpp
PASS-Backend/src/Engine/: ExecutionEngine.cpp  GraphExecutionEngine.cpp  SignalRouter.cpp  SimulationScheduler.cpp
PASS-Backend/src/Graph/: ConnectionManager.cpp  ProjectSerializer.cpp  TopologicalSorter.cpp
PASS-Backend/src/Scope/: ScopeBlock.cpp
PASS-Backend/src/Sine/: SineBlock.cpp
PASS-Frontend/: index.html  package-lock.json  package.json
PASS-Frontend/src/components/Block/: BlockLibraryPanel.css  BlockLibraryPanel.jsx  BlockNode.css  BlockNode.jsx  PropertiesPanel.css  PropertiesPanel.jsx
PASS-Frontend/src/components/Canvas/: SimulinkCanvas.css  SimulinkCanvas.jsx
PASS-Frontend/src/components/Connection/: ConnectionLayer.jsx
PASS-Frontend/src/components/Scope/: ScopePanel.css  ScopePanel.jsx  SimulationControls.css  SimulationControls.jsx
PASS-Frontend/src/components/Toolbar/: Toolbar.css  Toolbar.jsx
PASS-Frontend/src/hooks/: useSimulinkEditor.js
PASS-Frontend/src/models/: blockTypes.js
PASS-Frontend/src/pages/: Editor.css  Editor.jsx
PASS-Frontend/src/services/: simulationApi.js
PASS-Frontend/src/styles/: global.css
